# CourseOOP

./: .gitignore  CMakeLists.txt  consts.h  denstity.test  interfaces.h  main.cpp  math.cpp  math.h  menu.cpp  menu.h  readme.md  test.cpp  test.h  utils.h
EmpiricDistribution/: EmpiricDistribution.cpp  EmpiricDistribution.h
Estimate/: Estimate.cpp  Estimate.h
GeneralDistribution/: GeneralDistribution.cpp  GeneralDistribution.h
MixDistribution/: MixDistribution.cpp  MixDistribution.h  MixDistribution.tpp
Plotter/: Plotter.cpp  Plotter.h
